--- a/CG-Corretora/CG-Corretora-main/package.json
+++ b/CG-Corretora/CG-Corretora-main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cg-corretora-frontend",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "homepage": "https://netoguild.github.io/cg-corretora",
